# gen-intelligence

./: .gitignore  README.md  conductor.json  docker-compose.yml  start-ngrok.sh
app/: .dockerignore  .env.example  Dockerfile  config.py  main.py  pyproject.toml  scheduler.py
app/scripts/: generate_cycle_summary_data.py  generate_latest_headlines.py  generate_next_cycle_headlines.py  reboot_instance.py  send_arxiv_email.py  send_cycle_summary_email.py  send_daily_initiative_update.py  send_linear_digest_email.py  send_main_thread_rollup.py  send_plato_email.py  set_manus_webhook.py  set_webhook.py  test_raindrop_mcp.py
app/scripts/linear/: create_base_workspace_directory.py  sync_initiatives_to_obsidian.py  sync_single_initiative.py  sync_today_completed_to_todoist.py  sync_utils.py  test_find_main_thread_initiative.py  test_recent_initiative_activity.py
app/scripts/manus/: append_weekly_tasks_to_obsidian.py
app/scripts/todoist/: backfill_completions.py
app/services/: obsidian_telegram_log.py
app/services/email/: __init__.py  (+1 more)
app/tests/: capture_linear_webhooks.py  data  fetch_initiative_details.py  fetch_linear_initiatives.py  generate_latest_headlines.py  test_api.py  test_dropbox_redis.py  test_generate_cycle_summary_data.py  test_generate_latest_headlines.py  test_get_today_daily_action.py  test_get_today_journal.py  test_get_weekly_cycle.py  test_github_rollup.py  test_issues_touched.py  test_linear_digest_email.py  test_manus_tasks.py  test_scheduler.py  test_telegram_logs.py  test_todoist_completed.py  test_todoist_cycle_completions.py  todoist_oauth.py
(+77 files in other folders)
