[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dropbox>=12.0.2",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "openai>=1.0.0",
    "python-dotenv>=1.2.1",
    "pytz>=2025.2",
    "redis>=7.1.0",
    "requests>=2.32.5",
    "trafilatura>=1.12.0",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]
